# light-opengl

./: CMakeLists.txt  README.md
res/: sun.frag  sun.vert  venus.frag  venus.vert
src/: camera.h  engine.cpp  engine.h  inputhandler.cpp  inputhandler.h  logic.cpp  logic.h  main.cpp  mmain.cpp  shader.h  sphere.cpp  sphere.h  sphere_behaviour.cpp  sphere_behaviour.h  stb_image_connector.cpp  window.cpp  window.h
